--- a/SCME.WpfControlLibrary/Styles/ComboBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/ComboBox.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:profilesPageComponents="clr-namespace:SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
     </ResourceDictionary.MergedDictionaries>
@@ -113,6 +114,9 @@
                     </Grid>
                     <ControlTemplate.Triggers>
                         <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                            <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type profilesPageComponents:AddTestParameterUserControl}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
                             <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
                         </DataTrigger>
                         <Trigger Property="IsDropDownOpen" Value="True">
