--- a/SCME.WpfControlLibrary/Styles/TextBox.xaml
+++ b/SCME.WpfControlLibrary/Styles/TextBox.xaml
@@ -1,10 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
+                    xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
+                    xmlns:profilesPageComponents="clr-namespace:SCME.WpfControlLibrary.CustomControls.ProfilesPageComponents">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Colors.xaml" />
+    </ResourceDictionary.MergedDictionaries>
     <Style TargetType="TextBox" >
         <Setter Property="FontFamily" Value="{DynamicResource SCME.DefaultFont}"></Setter>
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
         <Setter Property="Background" Value="Transparent"></Setter>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type ListView}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Background.Color, RelativeSource={RelativeSource AncestorType={x:Type profilesPageComponents:AddTestParameterUserControl}, Mode=FindAncestor}}" Value="{StaticResource ListViewTestParametersColor}">
+                <Setter Property="Foreground" Value="{StaticResource WhiteColorBrush}"></Setter>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
     <Style TargetType="customControls:TextBoxWithTimer" BasedOn="{StaticResource {x:Type TextBox}}"></Style>
 </ResourceDictionary>
